add validation message to form, create pseudo loading icon

--- a/ui/app/templates/components/mount-backend-form.hbs
+++ b/ui/app/templates/components/mount-backend-form.hbs
@@ -82,6 +82,11 @@
           Back
         </button>
       </div>
+      {{#if this.validationMessage}}
+        <div class="control">
+          <AlertInline @type="danger" @message={{this.validationMessage}} @paddingTop={{true}} @mimicRefresh={{true}} />
+        </div>
+      {{/if}}
     {{else}}
       <button
         data-test-mount-next
