--- a/ui/lib/core/addon/templates/components/alert-inline.hbs
+++ b/ui/lib/core/addon/templates/components/alert-inline.hbs
@@ -1,12 +1,14 @@
-{{#if this.isLoading}}
-  <Icon @name="loading" class="loading" />
-{{else}}
-  <Icon @name={{this.alertType.glyph}} class={{this.alertType.glyphClass}} />
-  <p class={{this.textClass}} data-test-inline-error-message>
-    {{#if (has-block)}}
-      {{yield}}
-    {{else}}
-      {{@message}}
-    {{/if}}
-  </p>
-{{/if}}
+<div {{did-update this.refresh @message}} class={{concat "message-inline" this.sizeSmall this.paddingTop this.isMarginless}}>
+  {{#if this.isLoading}}
+    <Icon @name="loading" class="loading" />
+  {{else}}
+    <Icon @name={{this.alertType.glyph}} class={{this.alertType.glyphClass}} />
+    <p class={{this.textClass}} data-test-inline-error-message>
+      {{#if (has-block)}}
+        {{yield}}
+      {{else}}
+        {{@message}}
+      {{/if}}
+    </p>
+  {{/if}}
+</div>
