--- a/ui/lib/core/addon/templates/components/alert-inline.hbs
+++ b/ui/lib/core/addon/templates/components/alert-inline.hbs
@@ -1,4 +1,8 @@
-<div {{did-update this.refresh @message}} class={{concat "message-inline" this.sizeSmall this.paddingTop this.isMarginless}}>
+<div
+  {{did-update this.refresh @message}}
+  class={{concat "message-inline" this.paddingTop this.isMarginless this.sizeSmall}}
+  data-test-inline-alert
+>
   {{#if this.isLoading}}
     <Icon @name="loading" class="loading" />
   {{else}}
