--- a/ui/lib/core/addon/templates/components/alert-inline.hbs
+++ b/ui/lib/core/addon/templates/components/alert-inline.hbs
@@ -2,6 +2,7 @@
   {{did-update this.refresh @message}}
   class={{concat "message-inline" this.paddingTop this.isMarginless this.sizeSmall}}
   data-test-inline-alert
+  ...attributes
 >
   {{#if this.isRefreshing}}
     <Icon @name="loading" class="loading" />
