Removed red spellcheck underline for sensitive and secret KV values

--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -74,6 +74,7 @@
                 @onChange={{action "handleChange"}}
                 @value={{secret.value}}
                 data-test-secret-value="true"
+                spellcheck="false"
               />
             </div>
             <div class="column is-narrow info-table-row-edit">
