--- a/ui/app/templates/components/clients/running-total.hbs
+++ b/ui/app/templates/components/clients/running-total.hbs
@@ -59,14 +59,14 @@
         <h2 class="chart-title">Running client total</h2>
         <p class="chart-subtext">The number of clients which interacted with Vault during this date range. </p>
       </div>
-      <div class="data-details-top">
+      <div class="data-details-top" data-test-running-total-entity>
         <h3 class="data-details">Entity clients</h3>
         <p class="data-details">
           {{format-number this.entityClientData.runningTotal}}
         </p>
       </div>
 
-      <div class="data-details-bottom">
+      <div class="data-details-bottom" data-test-running-total-nonentity>
         <h3 class="data-details">Non-entity clients</h3>
         <p class="data-details">
           {{format-number this.nonEntityClientData.runningTotal}}
@@ -95,14 +95,14 @@
         </p>
       </div>
 
-      <div class="data-details-top">
+      <div class="data-details-top" data-test-running-new-entity>
         <h3 class="data-details">Average new entity clients per month</h3>
         <p class="data-details">
           {{format-number this.entityClientData.averageNewClients}}
         </p>
       </div>
 
-      <div class="data-details-bottom">
+      <div class="data-details-bottom" data-test-running-new-nonentity>
         <h3 class="data-details">Average new non-entity clients per month</h3>
         <p class="data-details">
           {{format-number this.nonEntityClientData.averageNewClients}}
