--- a/ui/lib/core/addon/components/form-field.hbs
+++ b/ui/lib/core/addon/components/form-field.hbs
@@ -27,12 +27,12 @@
             <RadioButton
               class="radio"
               name={{@attr.name}}
-              id={{or val.value val}}
+              id={{dasherize (or val.value val)}}
               @value={{or val.value val}}
               @onChange={{this.setAndBroadcast}}
               @groupValue={{(get @model this.valuePath)}}
             />
-            <label for={{or val.value val}} class="has-left-margin-xs">
+            <label for={{dasherize (or val.value val)}} class="has-left-margin-xs">
               {{or val.value val}}
             </label>
           </div>
