--- a/ui/app/templates/components/selectable-card.hbs
+++ b/ui/app/templates/components/selectable-card.hbs
@@ -4,7 +4,7 @@
     <div class="selectable-card-title">
       <h2 class="title-number">{{format-number this.total}}</h2>
       <h3 class="title is-5" data-test-selectable-card-title={{this.formattedCardTitle}}>{{this.formattedCardTitle}}</h3>
-      <p class="has-text-grey is-size-8">{{this.subText}}</p>
+      <p class="has-text-grey is-size-8">{{@subText}}</p>
     </div>
     {{yield}}
   </div>
@@ -14,7 +14,7 @@
       <div class="is-flex-between is-fullwidth card-details" data-test-selectable-card={{this.formattedCardTitle}}>
         <h3 class="title is-5">{{this.formattedCardTitle}}</h3>
         <LinkTo
-          @route={{this.actionTo}}
+          @route={{@actionTo}}
           class="has-icon-right is-ghost is-no-underline has-text-semibold"
           @query={{hash itemType=this.queryParam}}
           data-test-action-text={{this.actionText}}
