--- a/ui/app/templates/components/selectable-card.hbs
+++ b/ui/app/templates/components/selectable-card.hbs
@@ -16,7 +16,7 @@
         <LinkTo
           @route={{@actionTo}}
           class="has-icon-right is-ghost is-no-underline has-text-semibold"
-          @query={{hash itemType=this.queryParam}}
+          @query={{hash itemType=@queryParam}}
           data-test-action-text={{@actionText}}
         >
           {{@actionText}}
