--- a/ui/app/templates/components/clients/monthly-usage.hbs
+++ b/ui/app/templates/components/clients/monthly-usage.hbs
@@ -6,10 +6,15 @@
     </p>
   </div>
 
-  <div class="chart-container-wide">
-    <Clients::VerticalBarChart @dataset={{@verticalBarChartData}} @chartLegend={{@chartLegend}} />
-  </div>
-
+  {{#if @verticalBarChartData}}
+    <div class="chart-container-wide">
+      <Clients::VerticalBarChart @dataset={{@verticalBarChartData}} @chartLegend={{@chartLegend}} />
+    </div>
+  {{else}}
+    <div class="chart-empty-state chart-container-wide">
+      <EmptyState @icon="skip" @title="No data found" @bottomBorder={{true}} />
+    </div>
+  {{/if}}
   <div class="chart-subTitle">
     <h2 class="chart-title">Total monthly clients</h2>
     <p class="chart-subtext">
@@ -17,30 +22,31 @@
     </p>
   </div>
 
-  <div class="data-details-top">
+  <div class="data-details-top" data-test-monthly-usage-average-total>
     <h3 class="data-details">Average total clients per month</h3>
     <p class="data-details">
       {{format-number this.averageTotalClients}}
     </p>
   </div>
 
-  <div class="data-details-bottom">
+  <div class="data-details-bottom" data-test-monthly-usage-average-new>
     <h3 class="data-details">Average new clients per month</h3>
     <p class="data-details">
       {{format-number this.averageNewClients}}
     </p>
   </div>
 
-  <div class="timestamp">
+  <div data-test-monthly-usage-timestamp class="timestamp">
     {{#if @timestamp}}
       Updated
       {{date-format @timestamp "MMM d yyyy, h:mm:ss aaa"}}
     {{/if}}
   </div>
 
-  <div class="legend-right">
-    <span class="light-dot"></span><span class="legend-label">{{capitalize @chartLegend.0.label}}</span>
-    <span class="dark-dot"></span><span class="legend-label">{{capitalize @chartLegend.1.label}}</span>
-  </div>
-
+  {{#if @verticalBarChartData}}
+    <div data-test-monthly-usage-legend class="legend-right">
+      <span class="light-dot"></span><span class="legend-label">{{capitalize @chartLegend.0.label}}</span>
+      <span class="dark-dot"></span><span class="legend-label">{{capitalize @chartLegend.1.label}}</span>
+    </div>
+  {{/if}}
 </div>
