--- a/ui/lib/core/addon/components/form-field.hbs
+++ b/ui/lib/core/addon/components/form-field.hbs
@@ -23,7 +23,7 @@
     {{#if (eq @attr.options.editType "radio")}}
       <div class="control columns is-gapless" data-test-radio-input>
         {{#each (path-or-array @attr.options.possibleValues @model) as |val|}}
-          <div class="column is-1 is-flex-center has-text-grey">
+          <div class="column is-1 is-flex-center has-text-grey" data-test-input={{@attr.name}}>
             <RadioButton
               class="radio"
               name={{@attr.name}}
@@ -127,6 +127,7 @@
     <div class="field">
       {{#let (or (get @model this.valuePath) @attr.options.setDefault) as |initialValue|}}
         <TtlPicker2
+          data-test-input={{@attr.name}}
           @onChange={{this.setAndBroadcastTtl}}
           @label={{this.labelString}}
           @helperTextDisabled={{or @attr.options.helperTextDisabled "Vault will use the default lease duration."}}
