home link glimmerization

--- a/ui/app/templates/components/home-link.hbs
+++ b/ui/app/templates/components/home-link.hbs
@@ -1,7 +1,7 @@
-<span class={{this.class}}>
+<span class={{@class}}>
   {{#if (has-block)}}
     {{yield}}
   {{else}}
-    {{this.text}}
+    {{@text}}
   {{/if}}
 </span>
