--- a/ui/app/templates/vault/cluster/access/mfa/enforcements/enforcement/edit.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/enforcements/enforcement/edit.hbs
@@ -1,5 +1,5 @@
-<MfaLoginEnforcementHeader @heading="Update enforcement" />
-<MfaLoginEnforcementForm
+<Mfa::MfaLoginEnforcementHeader @heading="Update enforcement" />
+<Mfa::MfaLoginEnforcementForm
   @model={{this.model}}
   @onSave={{transition-to "vault.cluster.access.mfa.enforcements.enforcement" this.model.name}}
   @onClose={{transition-to "vault.cluster.access.mfa.enforcements.enforcement" this.model.name}}
