--- a/ui/lib/core/addon/components/string-list.hbs
+++ b/ui/lib/core/addon/components/string-list.hbs
@@ -9,8 +9,8 @@
   {{#if @label}}
     <label class="title is-label" data-test-string-list-label="true">
       {{@label}}
-      {{#if @helpText}}
-        <InfoTooltip>{{@helpText}}</InfoTooltip>
+      {{#if this.helpText}}
+        <InfoTooltip>{{this.helpText}}</InfoTooltip>
       {{/if}}
     </label>
   {{/if}}
