--- a/ui/app/templates/components/mount-backend-form.hbs
+++ b/ui/app/templates/components/mount-backend-form.hbs
@@ -18,19 +18,19 @@
     </h1>
   </p.levelLeft>
 </PageHeader>
-<form {{action (perform this.mountBackend) on="submit"}}>
+<form {{on "submit" (perform this.mountBackend)}}>
   <div class="box is-sideless is-fullwidth is-marginless">
     <NamespaceReminder @mode="enable" @noun={{if (eq this.mountType "auth") "Auth Method" "Secret Engine"}} />
     <MessageError @model={{this.model}} @errorMessage={{this.errorMessage}} @errors={{this.errors}} />
     {{#if this.showEnable}}
       <FormFieldGroups
         @model={{this.mountModel}}
-        @onChange={{action "onTypeChange"}}
+        @onChange={{this.onTypeChange}}
         @renderGroup="default"
         @modelValidations={{this.modelValidations}}
-        @onKeyUp={{action "onKeyUp"}}
+        @onKeyUp={{this.onKeyUp}}
       />
-      <FormFieldGroups @model={{this.mountModel}} @onChange={{action "onTypeChange"}} @renderGroup="Method Options" />
+      <FormFieldGroups @model={{this.mountModel}} @onChange={{this.onTypeChange}} @renderGroup="Method Options" />
     {{else}}
       {{#each (array "generic" "cloud" "infra") as |category|}}
         <h3 class="title box-radio-header">
@@ -38,6 +38,7 @@
         </h3>
         <div class="box-radio-container">
           {{#each (filter-by "category" category this.mountTypes) as |type|}}
+            {{! ARG TODO work on the onRadioChange }}
             <BoxRadio
               @displayName={{type.displayName}}
               @type={{type.type}}
@@ -77,7 +78,7 @@
         </button>
       </div>
       <div class="control">
-        <button data-test-mount-back type="button" class="button" onclick={{action "toggleShowEnable" false}}>
+        <button data-test-mount-back type="button" class="button" {{on "click" (fn this.toggleShowEnable false)}}>
           Back
         </button>
       </div>
@@ -91,7 +92,7 @@
         data-test-mount-next
         type="button"
         class="button is-primary"
-        onclick={{action "toggleShowEnable" true}}
+        {{on "click" (fn this.toggleShowEnable true)}}
         disabled={{not this.mountModel.type}}
       >
         Next
